--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
+    "@govuk-prototype-kit/step-by-step": "2.2.4",
+    "@govuk-prototype-kit/task-list": "2.0.0",
     "govuk-frontend": "5.13.0",
-    "govuk-prototype-kit": "13.18.1"
+    "govuk-prototype-kit": "13.18.1",
+    "jquery": "3.7.1",
+    "notifications-node-client": "8.2.1"
   }
 }
